<resources>
    <string name="app_name">Tui-La</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="journal">Journal</string>
    <string name="journal_prompted">Prompted</string>
    <string name="journal_unprompted">Unprompted</string>
    <string name="journal_prompts">Journal Prompts</string>
    <string name="journal_prompt_love">Increase Self love</string>
    <string name="journal_prompt_confidence">Create Confidence</string>
    <string name="journal_prompt_work">Shadow Work &amp; Inner Healing</string>
    <string name="journal_prompt_passion">Finding Your Passion</string>
    <string name="journal_prompt_anxiety">Relieve Anxiety</string>
    <string name="journal_prompt_passion_1">What is that one topic you can keep talking
        about?</string>
    <string name="journal_prompt_passion_2">If you had 5 minutes and the whole world was
        forced to listen, what would you say?</string>
    <string name="journal_prompt_passion_3">What does passion mean to you?</string>
    <string name="journal_prompt_passion_4">What skills come to you naturally?</string>
    <string name="journal_prompt_passion_5">What would you do with your life if you had
        no fear?</string>
    <string name="journal_prompt_confidence_1">What are 10 things you’re really good at?</string>
    <string name="journal_prompt_confidence_2">What are 5 things you have done that make
        you proud?</string>
    <string name="journal_prompt_confidence_3">Write out a gratitude list of things you
        are thankful for.</string>
    <string name="journal_prompt_confidence_4">Write out your ideal vision of your “dream
        life.”</string>
    <string name="journal_prompt_confidence_5">What are 3 ways you can take actionable
        steps towards your dreams?</string>
    <string name="journal_prompt_anxiety_1">What actions can you take to begin releasing
        your concerns?</string>
    <string name="journal_prompt_anxiety_2">Do you take a day off to relax and allow yourself
        to breathe? Why or why not?</string>
    <string name="journal_prompt_anxiety_3">What are 3 things that you are most afraid of
        and the reasons why.</string>
    <string name="journal_prompt_anxiety_4">What triggers your anxiety or makes your anxiety
        worse?</string>
    <string name="journal_prompt_anxiety_5">Write about your evening routine. Then write
        about things you can adjust in your evening routine to feel happier.</string>
    <string name="journal_prompt_love_1">Write down 10 positive affirmations that you can
        recite when you’re overwhelmed by your insecurities.</string>
    <string name="journal_prompt_love_2">What makes you feel loved?</string>
    <string name="journal_prompt_love_3">What sets your heart on fire, and why do you love
        yourself for that?</string>
    <string name="journal_prompt_love_4">If you struggle with self-care, what are the top
        reasons you neglect taking care of yourself?</string>
    <string name="journal_prompt_love_5">Write down 5 positive things you can tell yourself.</string>
    <string name="journal_prompt_work_1">What are the values you were brought up with?
        Who demonstrated these values?</string>
    <string name="journal_prompt_work_2">What are your biggest insecurities, and where
        do you believe they come from?</string>
    <string name="journal_prompt_work_3">What do you think is your worst trait? Why is
        this so bad? What could be a positive aspect of having this trait?</string>
    <string name="journal_prompt_work_4">What is the biggest lie you’ve ever told anyone
        else?</string>
    <string name="journal_prompt_work_5">What’s something that you try to hide about
        yourself? What do you think would happen if others found this out?</string>
    <string name="title">Title</string>
    <string name="entry">Entry</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="emotions">Emotions</string>
    <string name="menu_image">Menu image</string>
    <string name="crisis_support">Crisis Support</string>
    <string name="education">Education</string>
    <string name="records">Records</string>
    <string name="Button_journal">Journal</string>
    <string name="guided_meditation">Guided Meditation</string>
    <string name="tui_la">Tui-La</string>
    <string name="guided_breathing">Guided Breathing</string>
    <string name="menu_logo">menu_logo</string>
    <string name="add_new_card">Add New Card</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="payment_continue">Continue</string>
    <string name="payment_top_para">Choose a payment method below. Your account will not be charged during the 2 month (60-days) free trial.</string>
    <string name="payment_second_para">After 60 days, your account will be charged $49.99 for an annual subscription of Tui-La. You can choose to cancel your subscription at any time.</string>
    <string name="payment_pp">I have read Privacy Policy</string>
    <string name="payment_tc">I have read Terms and Conditions</string>
    <string name="payment_visa">Pay with Visa or Mastercard</string>
    <string name="payment_paypal">Pay with PayPal</string>
    <string name="payment_googlepay">Pay with Google Pay</string>
    <string name="login_logo">login_logo</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_email_password">Forgot Email/Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_button">Login</string>
    <string name="emoji_main_menu">Main Menu</string>
    <string name="emoji_afraid">Afraid</string>
    <string name="emoji_angry">Angry</string>
    <string name="emoji_stressed">Stressed</string>
    <string name="emoji_relaxed">Relaxed</string>
    <string name="emoji_tired">Tired</string>
    <string name="emoji_excited">Excited</string>
    <string name="emoji_happy">Happy</string>
    <string name="emoji_how_are_you_feeling">How are you feeling?</string>
    <string name="emoji_sad">Sad</string>
    <string name="emoji_loved">Loved</string>
    <string name="emoji_love_image">love image</string>
    <string name="emoji_relaxed_image">relaxed image</string>
    <string name="emoji_stressed_image">stressed image</string>
    <string name="emoji_afraid_image">afraid image</string>
    <string name="emoji_angry_image">angry image</string>
    <string name="emoji_tired_image">tired image</string>
    <string name="emoji_excited_image">excited image</string>
    <string name="emoji_happy_image">Happy_image</string>
    <string name="emoji_sad_image">sad image</string>
    <string name="home_menu">Home</string>
    <string name="menu_backbutton_disc">menu_backbutton_disc</string>
    <string name="payment_backbutton_disc">payment_backbutton_disc</string>
    <string name="support_lines">Support Lines</string>
    <string name="number">1-800-985-5990</string>
    <string name="call_711_then_dial_988">Call 711 then dial 988</string>
    <string name="text_or_call_988">Text or Call 988</string>
    <string name="national_sucicide">National Sucicide</string>
    <string name="and_crisis_lifeline">and Crisis Lifeline</string>
    <string name="for_deaf_and_hard_of_hearing">For Deaf and Hard of Hearing:</string>
    <string name="suicide_and_crisis_line">Suicide and Crisis Line</string>
    <string name="or_use_your_preferred_relay_service">(Or use your preferred relay service)</string>
    <string name="crisis_counseling_for_distress">Crisis Counseling for distress</string>
    <string name="related_to_disasters">related to disasters</string>
    <string name="Dscript_crisis_settings">crisis_settings</string>
    <string name="Dscript_crisis_menu">crisis_menu</string>
    <string name="dscript_menu_backbutton">menu_backbutton</string>
    <string name="dscript_menu_button">Menu_button</string>
    <string name="dscript_settings_button">Settings button</string>
    <string name="dscript_manage_subscription">Manage Subscription</string>
    <string name="app_help">App help</string>
    <string name="app_settings">App settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="backb">backB</string>
    <string name="stickers">stickers</string>
</resources>