<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"

    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_menu_home"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/home_menu"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_menu_GM"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/guided_meditation"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_home" />

    <Button
        android:id="@+id/button_menu_GB"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/guided_breathing"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_GM" />

    <Button
        android:id="@+id/button_menu_journal"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/journal"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_GB" />

    <Button
        android:id="@+id/button_menu_records"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/records"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_journal" />

    <Button
        android:id="@+id/button_menu_education"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/education"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_records" />

    <Button
        android:id="@+id/button_menu_CS"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/crisis_support"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_education" />

</androidx.constraintlayout.widget.ConstraintLayout>