<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">


    <Button
        android:id="@+id/button_AccontSettings"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/account_settings"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stickers"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/stickers"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_AccontSettings" />

    <Button
        android:id="@+id/button_Appsettings"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/app_settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_stickers" />

    <Button
        android:id="@+id/button_apphelp"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/app_help"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Appsettings" />

    <Button
        android:id="@+id/button_menu_education"
        android:layout_width="361dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/philosopher"
        android:text="@string/dscript_manage_subscription"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_apphelp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/backb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>