<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/add_new_card"
        android:textColor="#040404"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CHN_edittext"
        android:layout_width="327dp"
        android:layout_height="78dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/philosopher"
        android:hint="@string/cardholder_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/un_editText"
        android:layout_width="150dp"
        android:layout_height="78dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="228dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/philosopher"
        android:hint="@string/cvc"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/CN_edittext"
        android:layout_width="327dp"
        android:layout_height="84dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="304dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/philosopher"
        android:hint="@string/card_number"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ED_edittext"
        android:layout_width="167dp"
        android:layout_height="78dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="228dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/philosopher"
        android:hint="@string/expiration_date"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Continue_button"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/tl_rounded_textbox_pink"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_continue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>