<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/paypal_button"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/tl_rounded_textbox_pink"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_paypal"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gpay_button"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tl_rounded_textbox_blue"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_googlepay"
        android:textColor="#090909"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visa_button" />

    <Button
        android:id="@+id/visa_button"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/tl_rounded_textbox_green"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_visa"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="386dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_top_para"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="386dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_second_para"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pp_checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/pp_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_pp"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tc_checkBox"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/tc_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/philosopher"
        android:text="@string/payment_tc"
        android:textColor="#0E0E0E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/visa_button"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>